--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ extensions = mr.developer
 auto-checkout = *
 
 [sources]
-antispoofing.motion = git git@github.com:bioidiap/antispoofing.motion
+antispoofing.motion = fs antispoofing.motion
 
 [external]
 recipe = xbob.buildout:external
