Fine-tunning eye-blink counting strategy

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,8 @@ antispoofing.motion = fs antispoofing.motion
 
 [external]
 recipe = xbob.buildout:external
-egg-directories = /idiap/group/torch5spro/nightlies/last/install/linux-x86_64-release/lib
+;egg-directories = /idiap/group/torch5spro/nightlies/last/install/linux-x86_64-release/lib
+egg-directories = /idiap/temp/aanjos/bob/b/release/lib
 
 [python]
 recipe = zc.recipe.egg
